--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       filter: brightness(95%);
     }
     .content {
-      background-color: #f6e395;
+      background-color: #ffffff;
       padding: 10px 16px;
       display: none;
       overflow: hidden;
