--- a/index.html
+++ b/index.html
@@ -63,21 +63,24 @@
       margin: 1rem auto;
       max-height: 60px;
     }
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.85);
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      z-index: 9999;
-      padding: 2rem;
-    }
+  .overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.85);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 9999;
+  padding: 2rem;
+  box-sizing: border-box;
+  overflow-y: auto;
+}
+
     .overlay button {
       margin-top: 1rem;
       padding: 0.5rem 1rem;
