--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Activate Play Mode</title>
   <link rel="icon" href="activate-play-mode-icon.png" type="image/png" />
+    <link rel="apple-touch-icon" href="activate-play-mode-icon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <style>
     body {
