--- a/index.html
+++ b/index.html
@@ -301,5 +301,13 @@
     }
   </script>
 
+  <!-- Register service worker for PWA support -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./service-worker.js');
+    }
+  </script>
+
 </body>
 </html>
+
