--- a/index.html
+++ b/index.html
@@ -307,6 +307,28 @@
       navigator.serviceWorker.register('./service-worker.js');
     }
   </script>
+  <!-- Footer + Info Box -->
+<div style="margin-top: 3rem; display: flex; justify-content: center;">
+  <div style="max-width: 600px; width: 100%; background: linear-gradient(135deg, #1a0b8b, #3c2daf); padding: 1.5rem; border-radius: 12px; text-align: center; font-size: 0.9rem; color: white;">
+    <p style="margin-top: 0;"><strong>Need a refresher?</strong></p>
+    <p>
+      • <a href="https://www.playfulheartparenting.com/view/courses/activate-play-mode" target="_blank" style="color: #f6e395; text-decoration: underline;">Log into your course on Podia</a><br>
+      • Or set up podcast access: <a href="https://app.helloaudio.fm/feed/2cb2dff8-1647-42b2-a31c-34f9a58a4952/signup" target="_blank" style="color: #f6e395; text-decoration: underline;">Listen on your preferred app</a>
+    </p>
+
+    <p>
+      • <a href="guidebook.pdf" target="_blank" style="color: #f6e395; text-decoration: underline;">Open the Guidebook PDF</a>
+    </p>
+
+    <p>Questions, feedback, or something to share?<br>
+    Email Mia at <a href="mailto:mia@playfulheartparenting.com" style="color: #f6e395; text-decoration: underline;">mia@playfulheartparenting.com</a></p>
+
+    <p style="margin-top: 2rem; font-size: 0.8rem; color: rgba(255,255,255,0.6);">
+      © 2025 Mia Wisinski, Playful Heart Parenting.<br>
+      This app is for personal use only by those who have purchased the Activate Play Mode course from Playful Heart Parenting. Please do not share this link publicly or distribute without explicit permission.
+    </p>
+  </div>
+</div>
 
 </body>
 </html>
