--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   </script>
   <!-- Footer + Info Box -->
 <div style="margin-top: 3rem; display: flex; justify-content: center;">
-  <div style="max-width: 600px; width: 100%; background: linear-gradient(135deg, #1a0b8b, #3c2daf); padding: 1.5rem; border-radius: 12px; text-align: center; font-size: 0.9rem; color: white;">
+<div style="max-width: 600px; width: 100%; background: linear-gradient(135deg, #1a0b8b, #3c2daf); padding: 1.5rem; border-radius: 12px; text-align: left; font-size: 0.9rem; color: white;">
     <p style="margin-top: 0;"><strong>Need a refresher?</strong></p>
     <p>
       • <a href="https://www.playfulheartparenting.com/view/courses/activate-play-mode" target="_blank" style="color: #f6e395; text-decoration: underline;">Log into your course on Podia</a><br>
