--- a/index.html
+++ b/index.html
@@ -312,12 +312,11 @@
 <div style="max-width: 600px; width: 100%; background: linear-gradient(135deg, #1a0b8b, #3c2daf); padding: 1.5rem; border-radius: 12px; text-align: left; font-size: 0.9rem; color: white;">
     <p style="margin-top: 0;"><strong>Need a refresher?</strong></p>
     <p>
-      • <a href="https://www.playfulheartparenting.com/view/courses/activate-play-mode" target="_blank" style="color: #f6e395; text-decoration: underline;">Log into your course on Podia</a><br>
-      • Or set up podcast access: <a href="https://app.helloaudio.fm/feed/2cb2dff8-1647-42b2-a31c-34f9a58a4952/signup" target="_blank" style="color: #f6e395; text-decoration: underline;">Listen on your preferred app</a>
+      • Set up course audio access: <a href="https://app.helloaudio.fm/feed/2cb2dff8-1647-42b2-a31c-34f9a58a4952/signup" target="_blank" style="color: #f6e395; text-decoration: underline;">Listen on the podcast player of your choice</a>
     </p>
 
     <p>
-      • <a href="guidebook.pdf" target="_blank" style="color: #f6e395; text-decoration: underline;">Open the Guidebook PDF</a>
+      • <a href="guidebook.pdf" target="_blank" style="color: #f6e395; text-decoration: underline;">Activate Play Mode Guidebook PDF</a>
     </p>
 
     <p>Questions, feedback, or something to share?<br>
