--- a/index.html
+++ b/index.html
@@ -307,6 +307,21 @@
       navigator.serviceWorker.register('./service-worker.js');
     }
   </script>
+    <!-- Join Community Button -->
+  <div style="text-align: center; margin: 2rem 0;">
+    <p style="margin-bottom: 0.5rem; font-size: 0.95rem;">Join our private community</p>
+    <a href="https://playfulheartparenting.podia.com/community" target="_blank" style="
+      background-color: #f6e395;
+      color: #1a0b8b;
+      padding: 10px 20px;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 6px;
+      display: inline-block;
+    ">
+      Play Mode Activators
+    </a>
+  </div>
   <!-- Footer + Info Box -->
 <div style="margin-top: 3rem; display: flex; justify-content: center;">
 <div style="max-width: 600px; width: 100%; background: linear-gradient(135deg, #1a0b8b, #3c2daf); padding: 1.5rem; border-radius: 12px; text-align: left; font-size: 0.9rem; color: white;">
